--- a/VRCPictureToClipboard/VRCPictureToClipboard.csproj
+++ b/VRCPictureToClipboard/VRCPictureToClipboard.csproj
@@ -7,9 +7,14 @@
     <UserSecretsId>dotnet-VRCPictureToClipboard-bc739eab-4cb4-491c-a285-215a94953d94</UserSecretsId>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
+    <Copyright>Duinrahaic</Copyright>
+    <Company>Duinrahaic</Company>
+    <Authors>Duinrahaic</Authors>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.2" />
   </ItemGroup>
 </Project>
