--- a/VRCPictureToClipboard/VRCPictureToClipboard.csproj
+++ b/VRCPictureToClipboard/VRCPictureToClipboard.csproj
@@ -14,6 +14,8 @@
     <OutputType>WinExe</OutputType>
     <DebugType>embedded</DebugType>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
