--- a/VRCPictureToClipboard/VRCPictureToClipboard.csproj
+++ b/VRCPictureToClipboard/VRCPictureToClipboard.csproj
@@ -14,7 +14,7 @@
     <OutputType>WinExe</OutputType>
     <DebugType>embedded</DebugType>
     <ApplicationIcon>icon.ico</ApplicationIcon>
-    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
     <Version>2.0.0</Version>
   </PropertyGroup>
 
@@ -42,5 +42,10 @@
     <None Update="manifest.vrmanifest">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ZXing.Net" Version="0.16.9" />
+    <PackageReference Include="ZXing.Net.Bindings.Windows.Compatibility" Version="0.16.12" />
   </ItemGroup>
 </Project>
